# G2ME-legacy

./: CMakeLists.txt  G2ME-client.mk  G2ME-server.mk  G2ME.c  G2ME.h  G2ME.mk  Makefile  README.md  client.c  clientserverutil.c  clientserverutil.h  compileForWindows.sh  convchallonge.py  convchallonge.sh  convchallongeperl.sh  data_dir.c  data_dir.h  dlsmashgg.js  dlsmashgg.sh  entry.c  entry.h  entry_file.c  entry_file.h  fileops.c  fileops.h  glicko2.c  glicko2.h  opp_files.c  opp_files.h  p_files.c  p_files.h  package.json  player_dir.c  player_dir.h  pr.c  pr.h  printing.c  printing.h  server.c  sorting.c  (+7 more)
bracket_conversion/: dlsmashgg.sh
examples/: TEST.sea  TEST1  TEST2  example1
src/: graphicalG2ME.java
tests/: entry_tests.c  output_tests.c  p_file_tests.c  player_tests.c  runtestcases.py  runtestcases.sh  testing.h  tests.c
tests/correct_output/: testB1C1  testB1M  testB1M2  testB1R1  testB1R2  testB1fM  testB1fR2  testB1fo  testB1fvO  testB1fvR1  testB1fvR2  testB1fvh1  testB1fvh2  testB1h1  testB1mO  testB1mR1  testB1mR2  testB1mfC  testB1mfo  testB1mfvO  testB1mfvR  testB1mfvh  testB1mvO  testB1mvR1  testB1mvh1  testB1o  testB1vR1  testB1vR2  testB1vh1  testB1vo  testC2  testC3  testM4  testb1C  testb1M  testb1R2  testb1fR1  testb1fo  testb1fvR1  testb1fvo  (+31 more)
tests/input/: TEST.sea  TEST2  filter1
tests/tests_expected/p_file_tests/appendEntryToPlayerFile/.players/: PlayerFreshlyInitialized
tests/tests_expected/p_file_tests/initializePlayerFile/.players/: PlayerTestName
tests/tests_input/p_file_tests/appendEntryToPlayerFile/.players/: PlayerFreshlyInitialized
